Updated with Links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <ul class="navigation">
                 <li>Home</li>
                 <li>About</li>
-                <li>Portfolio</li>
+                <li><a href="/Users/georgedemopoulos/Documents/Code/UX_UI_HW_18/portfolio.html">Portfolio</a></li>
                 <li>Resume</li>
                 <li>Contact</li>
             </ul>
