--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@ body {
         <div class="inline-block logo"><img src="Logo-2.png" alt="logo"></div>
         <nav class="inline-block">
             <ul class="navigation">
-                <li><a href="/Users/georgedemopoulos/Documents/Code/UX_UI_HW_18/portfolio.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li>About</li>
                 <li>Portfolio</li>
                 <li>Resume</li>
